[gd_scene load_steps=4 format=2]

[ext_resource path="res://levels/abstract_level.gd" type="Script" id=1]
[ext_resource path="res://objects/road/roadsection.tscn" type="PackedScene" id=2]
[ext_resource path="res://actors/trap_spawner/spawner.tscn" type="PackedScene" id=3]

[node name="level" type="Node2D"]

script = ExtResource( 1 )

[node name="layer_1" type="Node" parent="." index="0"]

[node name="roadsection" parent="layer_1" index="0" instance=ExtResource( 2 )]

position = Vector2( 0, 960 )
_sections_unfolded = [ "Transform" ]

[node name="layer_2" type="Node" parent="." index="1"]

[node name="layer_3" type="Node" parent="." index="2"]

[node name="spawner" parent="layer_3" index="0" instance=ExtResource( 3 )]

position = Vector2( -71.2077, -2002.44 )

[node name="layer_4" type="Node" parent="." index="3"]


